# krgo-app

./: .gitignore  .vercelignore  GEMINI.md  package.json  pyproject.toml  requirements.txt  vercel.json
api/: database.py  index.py  models.py  requirements.txt  schemas.py
api/routers/: sessions.py
api/services/: receipt_parser.py
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/api/: index.js
frontend/src/router/: index.js
frontend/src/stores/: session.js
frontend/src/views/: HomeView.vue  SessionView.vue  SummaryView.vue
